<resources>
    <string name="app_name">FilmSearch</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Найти</string>
    <string name="favorite">Любимые</string>
    <string name="later">Буду смотреть</string>
    <string name="watched">Просмотрено</string>
    <string name="hint">Матрица</string>
    <string name="inputName">Введите название</string>
    <string-array name="types">
        <item> movie </item>
        <item> tv-series </item>
        <item> cartoon </item>
        <item> anime </item>
        <item> animated-series </item>
        <item> tv-show</item>
    </string-array>
</resources>